# OSVR-Core

./: .appveyor.yml  .bettercodehub.yml  .clang-format  .clang-tidy  .clang_complete.in  .gitattributes  .gitignore  .gitmodules  .linter-clang-flags.in  .linter-clang-includes.in  .travis.yml  BINARY_README.md  BoostTargets.cmake  Brewfile  CMakeBoostHelper.cmake  CMakeLists.txt  CONTRIBUTING.md  CompilerFeatures.cmake  Doxyfile  Doxyfile-common  Doxyfile-external  HACKING.md  InternalAddPlugin.cmake  METADOCS.md  NEWS.md  NOTICE  OpenCVAndroid.cmake  README.md  Version.cmake  appveyor.yml  ogvrConfig.cmake  osvrAddPlugin.cmake  osvrConfig.cmake  osvrConfigBuildTreePaths.cmake  osvrConfigInstalledBoost.cmake  osvrConfigInstalledOpenCV.cmake  osvrConvertJson.cmake
apps/: BasicPluginLoader.cpp  BasicPluginLoaderWithPoll.cpp  BasicServer.cpp  CMakeLists.txt  ClientMainloop.h  ClientMainloopThread.h  ConfigurableServer.cpp  ConnectionHost.cpp  JSONTools.h  MockServer.cpp  RecomposeTransform.h  ResetYaw.cpp  WrapRoute.h  diagnose-rotation.cpp  osvrServerConfig.json  osvr_calibrate.cpp  osvr_dump_tree_json.cpp  osvr_list_usbserial.cpp  osvr_log_to_json.cpp  osvr_print_tree.cpp  osvr_reset_yaw.cpp  osvr_server.cpp  osvr_server.rc  osvr_server_config.HDK.sample.json  osvr_server_config.HDKv1.1.sample.json  osvr_server_config.HDKv1.sample.json  osvr_server_config.HDKv1_YEI.sample.json  osvr_server_config.HDKv1_YEI.xrightydown.sample.json  osvr_server_config.HDKv1noHydra.sample.json  osvr_server_config.OpenCVCamera.sample.json  osvr_server_config.VideoBasedHMDTracker.sample.json  osvr_server_config.android.sample.json  osvr_server_config.autodetectonly.sample.json  osvr_server_config.dSight.json  osvr_server_config.externalvrpn.sample.json  osvr_server_config.eyeTracker.sample.json  osvr_server_config.gesture.sample.json  osvr_server_config.json  osvr_server_config.locomotion.sample.json  osvr_server_config.shared.sample.json  (+3 more)
apps/PathTreeExport/: CMakeLists.txt  DOTGraphOutput.cpp  DOTGraphOutput.h  GraphFactoryRegistration.h  GraphOutputInterface.cpp  GraphOutputInterface.h  PathTreeExport.cpp
apps/displays/: HMD.json  HMD_Vuzix1200dx.json  HMD_Vuzix720.json  LZT_Home_VR1  OSVR_HDK_1_1.json  OSVR_HDK_1_3.json  OSVR_HDK_1_3_with_mesh.json  OSVR_HDK_2_0.json  Oculus_Rift_DK1.json  Oculus_Rift_DK2.json  Sensics_dSight_landscape.json  Sensics_dSight_landscape_1input_sbs.json  Sensics_dSight_landscape_2inputs.json  Sensics_dSight_portrait.json  Sensics_dSight_portrait_1input_sbs.json  Sensics_dSight_portrait_2inputs.json  Sensics_xSight_6123.json  Sensics_zSight_1280_1024_1input.json  Sensics_zSight_1280_1024_1input_sbs.json  Sensics_zSight_1280_1024_2inputs.json  Sensics_zSight_1280_720_1input.json  Sensics_zSight_1280_720_1input_sbs.json  Sensics_zSight_1280_720_2inputs.json  Sensics_zSight_1920.json  Sensics_zSight_1920_100.json  Sensics_zSight_1920_100_1input.json  Sensics_zSight_1920_100_1input_sbs.json  Sensics_zSight_1920_100_2inputs.json  Sensics_zSight_1920_1input.json  Sensics_zSight_1920_1input_sbs.json  Sensics_zSight_1920_2inputs.json  Sensics_zSight_1_1.json  Vrvana_Totem.json  field_of_view_calculator.xlsx
apps/external-devices/: osvr_server_config.externalvrpn.ART_DTrack_Flystick.json  osvr_server_config.externalvrpn.Afterglow_AX1.json  osvr_server_config.externalvrpn.Analoy_Fly.json  osvr_server_config.externalvrpn.Griffin_PowerMate.json  osvr_server_config.externalvrpn.Logitech_Extreme_3D_Pro.json  osvr_server_config.externalvrpn.SaitekST290.json  osvr_server_config.externalvrpn.SideWinder.json  osvr_server_config.externalvrpn.SideWinder2.json  osvr_server_config.externalvrpn.Xbox_Controller360.json  osvr_server_config.externalvrpn.Xbox_ControllerS.json  osvr_server_config.externalvrpn_Futaba_InterLink_Elite.json
apps/non-shipping-sample-configs/: osvr_server_config.UnifiedVideoTracker.DirectNoClientSide.sample.json  osvr_server_config.UnifiedVideoTracker.ExtendedLandscape.sample.json  osvr_server_config.UnifiedVideoTracker.ExtendedPortrait.sample.json  osvr_server_config.VideoBasedHMDTrackerAllParams.sample.json
apps/osvr_log_to_csv/: CMakeLists.txt  CSV.h  osvr_log_to_csv.cpp
apps/sample-configs/: osvr_server_config.DeadReckoningRotationFilter.sample.json  osvr_server_config.FusedHDK13RenderManagerDebug.sample.json  osvr_server_config.FusedVideoBasedHMDTracker.sample.json  osvr_server_config.HDK12DirectMode.sample.json  osvr_server_config.HDK12ExtendedLandscape.sample.json  osvr_server_config.HDK12ExtendedPortrait.sample.json  osvr_server_config.HDK13DirectMode.sample.json  osvr_server_config.HDK13DirectModeMesh.sample.json  osvr_server_config.HDK13ExtendedLandscape.sample.json  osvr_server_config.HDK13ExtendedPortrait.sample.json  osvr_server_config.HDK13ExtendedPortraitMesh.sample.json  osvr_server_config.HDK20DirectMode.sample.json  osvr_server_config.HDK20ExtendedLandscape.sample.json  osvr_server_config.HDK20ExtendedPortrait.sample.json  osvr_server_config.HDKv1.1.sample.json  osvr_server_config.HDKv1.sample.json  osvr_server_config.HDKv1_YEI.sample.json  osvr_server_config.HDKv1_YEI.xrightydown.sample.json  osvr_server_config.OneEuroFilter.sample.json  osvr_server_config.OpenCVCamera.sample.json  osvr_server_config.UnifiedVideoTracker.Direct.sample.json  osvr_server_config.UnifiedVideoTracker.DirectNoClientSide.sample.json  osvr_server_config.UnifiedVideoTracker.ExtendedLandscape.sample.json  osvr_server_config.UnifiedVideoTracker.ExtendedPortrait.sample.json  osvr_server_config.UnifiedVideoTracker.HDK12DirectLandscape.debug.json  osvr_server_config.UnifiedVideoTracker.HDK12DirectLandscape.json  osvr_server_config.UnifiedVideoTracker.HDK12DirectLandscape.noimu.debug.json  (+43 more)
devtools/: CMakeLists.txt  add_sdk_to_registry.cmd  add_sdk_to_registry.ps1  cianalyze.cmd  cibuild.cmd  cipkg.cmd  format-file.cmd  format-project.sh  gen-iwyu-mappings.sh  install-eigen-visualizers.cmd  iwyu.imp  iwyu.sh  listHeaders.sh  listSources.sh  osvr_json_to_c.cpp  osvr_json_to_c.py  test_osvr_json_to_c.py
examples/clients/: AnalogCallback.c  Imaging.c  (+24 more)
plugins/: CMakeLists.txt
(+1584 files in other folders)
